--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^6.1.5
   percent_indicator: ^4.2.2
   animated_text_kit: ^4.2.2
+  firebase_core: ^1.20.0
 
 dev_dependencies:
   flutter_test:
